--- a/responsive.css
+++ b/responsive.css
@@ -8,4 +8,25 @@
     gap: 15px;
     align-items: center;
 }
+.banner{
+    /* display: flex; */
+    flex-direction: column;
+   
+
+}
+.text-container{
+    width: 100%;
+    margin-top: -30px;
+    padding-bottom: 10px;
+}
+.banner-image-container{
+    width: 100%;
+}
+.header{
+    padding-bottom: 10px;
+}
+
+.grid-container {
+    grid-template-columns: repeat(1, 1fr);
+}
 }
