--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-    font-family: "Poppins", serif;
-    font-weight: 600;
+    font-family: "Roboto", serif;
+    font-weight: 500;
 }
 
 /* nav bar style */
 .header {
     background-color: #9376e0;
-
+    margin-bottom: 15px;
 }
 
 .header-section {
-    /* border: 2px solid blue; */
+    border: 2px solid blue;
     margin: 0 auto;
     max-width: 1250px;
     display: flex;
@@ -21,7 +21,7 @@ body {
 }
 
 .nav-container {
-    /* border: 2px solid blue; */
+    border: 2px solid blue;
     min-height: 20px;
     display: flex;
     align-items: center;
@@ -51,15 +51,132 @@ body {
 }
 
 .itmes-container a {
-    text-decoration: none;   
+    text-decoration: none;
     color: white;
 }
 
- .itmes-container .login-button a {
+.itmes-container .login-button a {
 
     padding: 10px 20px;
     background-color: #dd5cb6;
     border-radius: 5px;
     color: black;
+}
+
+.banner {
+    display: flex;
+    border-radius: 7px;
+    max-width: 1250px;
+    margin: 0 auto;
+    background-color: rgb(245, 245, 245)
+}
+
+.text-container {
+    width: 50%;
+    justify-items: center;
+
+}
+
+.men-bags {
+    font-size: 60px;
+    background: linear-gradient(45deg, #9376e0, #dd5cb6);
+    background-clip: text;
+    color: transparent;
+}
+
+.new-mens-collection {
+    font-family: "Dancing Script", serif;
+    font-size: 50px;
+    margin-top: -30px;
+
+}
+
+.social-icons {
+    margin-top: -40px;
+}
+
+.banner-image-container {
+    width: 50%;
+}
+
+.banner-image-container img {
+    width: 100%;
+    border-radius: 8px;
+    position: relative;
+
+}
+
+button {
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #de3bc6;
+    color: white;
+    margin-top: 10px;
+
+}
+
+.Discount {
+    position: absolute;
+    background-color: rgb(128, 128, 16);
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    bottom: 79%;
+    left: 69%;
+}
+
+/* products style */
+.product-section {
+    max-width: 1250px;
+    margin: 0 auto;
+}
+
+.grid-container {
+    min-width: 400px;
+    border: 2px solid red;
+    display: grid;
+    /* display: flex; */
+    gap: 20px;
+    justify-content: space-between; 
+    grid-template-columns: repeat(3,1fr);
+   
+}
+
+.single-product {
+    border: 2px solid blue;
+    /* display: grid; */
+    
+    background-color: rgb(229, 236, 237);
+    border-radius: 10px;
+    padding: 10px;
+    
+}
+
+.single-product img {
+    width: 70%;
+    margin: 0 auto;
+    display: block;
+}
+
+.heading-icon {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.icons {
+    display: flex;
+    gap: 3px;
+}
+
+.icons img {
+    background-color: #d292f0;
+    border-radius: 50%;
+    padding: 5px 5px;
+    width: 28px;
 
 }
